# internal/server/restapi/rbac.go
@@ -82,16 +82,17 @@ var minRole = map[string]string{
 	"TestIndexer":      roleAdmin,
 	"TestDraftIndexer": roleAdmin,
 
-	"ListImports":              roleAdmin,
-	"StartImport":              roleAdmin,
-	"GetImport":                roleAdmin,
-	"DeleteImport":             roleAdmin,
-	"CancelImport":             roleAdmin,
-	"CommitImport":             roleAdmin,
-	"ListImportFiles":          roleAdmin,
-	"UpdateImportFileDecision": roleAdmin,
-	"ListImportShows":          roleAdmin,
-	"UpdateImportShowDecision": roleAdmin,
+	"ListImports":               roleAdmin,
+	"StartImport":               roleAdmin,
+	"GetImport":                 roleAdmin,
+	"DeleteImport":              roleAdmin,
+	"CancelImport":              roleAdmin,
+	"CommitImport":              roleAdmin,
+	"ListImportFiles":           roleAdmin,
+	"BulkUpdateImportDecisions": roleAdmin,
+	"UpdateImportFileDecision":  roleAdmin,
+	"ListImportShows":           roleAdmin,
+	"UpdateImportShowDecision":  roleAdmin,
 
 	"GetPathMigration":      roleAdmin,
 	"GetPathMigrationRoots": roleAdmin,
